--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,223 @@
 /* Add CSS styling here */
+@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+* {
+	box-sizing: border-box;
+}
+html {
+	border: 1px solid white;
+}
+body {
+	font-family: 'Yusei Magic', sans-serif;
+	background-color: #333;
+	/* flex-direction: column; */
+	/* justify-content: center; */
+}
+.flex {
+	display: flex;
+}
+.container {
+	flex-direction: column;
+	justify-content: center;
+}
+header {
+	justify-content: space-between;
+}
+.header-logo {
+	font-size: 4rem;
+	align-items: center;
+}
+nav {
+	width: 30%;
+	justify-content: space-evenly;
+	align-items: center;
+}
+nav a {
+	color: #eee;
+	text-decoration: none;
+	font-size: 2rem;
+}
+nav a:visited {
+	color: #eee;
+}
+.hero-section-container {
+	justify-content: center;
+}
+
+.hero-section {
+	width: 85vw;
+	height: 45vw;
+	justify-content: center;
+}
+
+.hero-image {
+	display: flex;
+	width: 100%;
+	background: url(https://picsum.photos/id/48/300/200);
+	background-position: top;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+section.hero-section div.hero-image {
+	justify-content: center;
+	align-items: center;
+}
+div.hero-image button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 55px;
+	width: 220px;
+	font-size: 2rem;
+	background-color: #333;
+	color: white;
+	border: none;
+	border-radius: 20px;
+	text-shadow: 2px 2px #000;
+	box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
+	font-family: 'Yusei Magic', sans-serif;
+	outline: none;
+}
+.gallery-section-container {
+	justify-content: center;
+}
+.gallery {
+	display: flex;
+	margin-top: 100px;
+	width: 95%;
+	height: 1000px;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-content: space-around;
+}
+.gallery-card {
+	background-color: #555;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 25vw;
+	height: 400px;
+}
+.gallery-card h3 {
+	color: #eee;
+	font-size: 2rem;
+}
+.gallery-image {
+	border-radius: 10px;
+	height: 300px;
+	width: 300px;
+	justify-content: center;
+}
+.image {
+	border-radius: 10px;
+	height: 300px;
+	width: 300px;
+	background-size: cover;
+}
+.image-1 {
+	background: url(https://picsum.photos/id/515/200);
+}
+.image-2 {
+	background: url(https://picsum.photos/id/547/200);
+}
+.image-3 {
+	background: url(https://picsum.photos/id/87/200);
+}
+.image-4 {
+	background: url(https://picsum.photos/id/78/200);
+}
+.image-5 {
+	background: url(https://picsum.photos/id/98/200);
+}
+.image-6 {
+	background: url(https://picsum.photos/id/49/200);
+}
