--- a/style/index.css
+++ b/style/index.css
@@ -107,7 +107,6 @@ body {
 header {
 	justify-content: space-between;
 	margin-bottom: 30px;
-	/* position: fixed; */
 }
 .header-logo {
 	font-size: 4rem;
@@ -128,6 +127,7 @@ nav {
 	background-color: #eee;
 	border: 2px solid black;
 	border-radius: 3px;
+	transition: 0.3s;
 }
 .nav-tab:hover {
 	/* color: #eee; */
@@ -201,12 +201,16 @@ div.hero-image button {
 	font-family: 'Yusei Magic', sans-serif;
 	outline: none;
 	cursor: pointer;
+	transition: 0.3s;
 }
 
 div.hero-image a {
 	text-decoration: none;
 }
 div.hero-image a:hover button {
+	height: 120px;
+	width: 350px;
+	font-size: 3.2rem;
 	background-color: #ccc;
 	color: #333;
 }
@@ -223,7 +227,6 @@ div.hero-image a:hover button {
 	align-content: space-around;
 }
 .gallery-card {
-	/* background-color: #555; */
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
@@ -250,37 +253,31 @@ div.hero-image a:hover button {
 }
 .image-1 {
 	background: url(https://images.unsplash.com/photo-1553531888-a5892402adce?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80);
-	/* background: url(https://picsum.photos/id/515/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .image-2 {
 	background: url(https://images.unsplash.com/photo-1524168948265-8f79ad8d4e33?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80);
-	/* background: url(https://picsum.photos/id/547/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .image-3 {
 	background: url(https://images.unsplash.com/photo-1506729623306-b5a934d88b53?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80);
-	/* background: url(https://picsum.photos/id/87/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .image-4 {
 	background: url(https://images.unsplash.com/photo-1509343256512-d77a5cb3791b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=800);
-	/* background: url(https://picsum.photos/id/78/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .image-5 {
 	background: url(https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=800);
-	/* background: url(https://picsum.photos/id/98/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .image-6 {
 	background: url(https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=800);
-	/* background: url(https://picsum.photos/id/49/200); */
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -291,6 +288,7 @@ footer {
 	height: 250px;
 	justify-content: center;
 	align-items: center;
+	margin-top: 30px;
 }
 footer button {
 	font-size: 1.5rem;
