Adds Social media links in the footer

--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 /* Add CSS styling here */
 @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+/* @import 'font-awesome'; */
 html,
 body,
 div,
@@ -106,6 +107,7 @@ body {
 }
 header {
 	justify-content: space-between;
+	margin-top: 20px;
 	margin-bottom: 30px;
 }
 .header-logo {
@@ -289,6 +291,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 	margin-top: 30px;
+	flex-direction: column;
 }
 footer button {
 	font-size: 1.5rem;
@@ -299,4 +302,35 @@ footer button {
 	border: none;
 	border-radius: 2px;
 	cursor: pointer;
+}
+.social-media-footer {
+	margin-top: 40px;
+	display: flex;
+	justify-content: space-between;
+	height: 65px;
+	width: 250px;
+	font-size: 3.2rem;
+}
+.grow-container-footer {
+	height: 70px;
+	width: 70px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+footer a {
+	font-size: 3rem;
+	display: block;
+	text-decoration: none;
+	color: #333;
+	transition: 0.3;
+}
+footer a:visited {
+	color: #333;
+}
+
+footer div a:hover {
+	color: #111;
+	font-size: 3.5rem;
 }
