--- a/style/index.css
+++ b/style/index.css
@@ -330,3 +330,9 @@ footer div a:hover {
 	color: #111;
 	font-size: 3.5rem;
 }
+
+/* /// Mobile view styles /// */
+@media (max-width: 800px) {
+}
+@media (max-width: 500px) {
+}
