--- a/style/index.css
+++ b/style/index.css
@@ -102,6 +102,7 @@ body {
 	display: flex;
 }
 .container {
+	width: 100%;
 	flex-direction: column;
 	justify-content: center;
 }
@@ -113,12 +114,13 @@ header {
 .header-logo {
 	font-size: 4rem;
 	align-items: center;
-	padding-left: 20px;
+	padding-left: 2%;
 }
 nav {
-	width: 35%;
-	justify-content: space-evenly;
+	width: 45%;
+	justify-content: space-between;
 	align-items: center;
+	padding-right: 2%;
 }
 .nav-tab {
 	display: flex;
@@ -160,6 +162,7 @@ nav {
 .home a:visited {
 	color: white;
 }
+/* /////////////Hero Section Styles////////////// */
 
 .hero-section-container {
 	justify-content: center;
@@ -179,16 +182,16 @@ nav {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-section.hero-section div.hero-image {
+.hero-section .hero-image {
 	justify-content: center;
 	align-items: center;
 }
-div.hero-image button {
+.hero-image button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100px;
-	width: 320px;
+	width: 100%;
 	font-size: 3rem;
 	background-color: #333;
 	color: #ccc;
@@ -199,19 +202,23 @@ div.hero-image button {
 	font-family: 'Yusei Magic', sans-serif;
 	outline: none;
 	cursor: pointer;
-	transition: 0.3s;
 }
 
-div.hero-image a {
+.hero-image a {
 	text-decoration: none;
+	width: 35%;
 }
-div.hero-image a:hover button {
+.hero-image a:hover {
+	width: 40%;
+}
+.hero-image a:hover button {
 	height: 120px;
-	width: 350px;
 	font-size: 3.2rem;
 	background-color: #ccc;
 	color: #333;
 }
+
+/* ////////////Gallery Section Styles////////////// */
 .gallery-section-container {
 	justify-content: center;
 }
@@ -219,7 +226,6 @@ div.hero-image a:hover button {
 	display: flex;
 	margin-top: 100px;
 	width: 100%;
-	height: 1500px;
 	justify-content: space-around;
 	flex-wrap: wrap;
 	align-content: space-around;
@@ -230,8 +236,8 @@ div.hero-image a:hover button {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	width: 600px;
-	height: 675px;
+	width: 40%;
+	height: 50vw;
 }
 .gallery-card h3 {
 	color: #333;
@@ -240,14 +246,14 @@ div.hero-image a:hover button {
 }
 .gallery-image {
 	border-radius: 10px;
-	height: 600px;
-	width: 600px;
+	height: 40vw;
+	width: 100%;
 	justify-content: center;
 }
 .image {
 	border-radius: 10px;
-	height: 600px;
-	width: 600px;
+	width: 100%;
+	height: 100%;
 }
 .image-1 {
 	background: url(https://images.unsplash.com/photo-1553531888-a5892402adce?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80);
@@ -279,7 +285,7 @@ div.hero-image a:hover button {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
-
+/* //////////////////Footer Styles/////////////// */
 footer {
 	background-color: #777;
 	width: 100%;
@@ -331,8 +337,104 @@ footer div a:hover {
 	font-size: 3.5rem;
 }
 
-/* /// Mobile view styles /// */
+/* //////////////// Media Queries //////////////// */
+@media (max-width: 950px) {
+	header,
+	nav {
+		align-items: center;
+		flex-direction: column;
+	}
+	nav {
+		margin-top: 20px;
+	}
+	.header-logo {
+		font-size: 4rem;
+	}
+	.hero-image button {
+		font-size: 2rem;
+		height: 70px;
+		border-radius: 7px;
+	}
+	.hero-image button:hover {
+		font-size: 2.2rem;
+	}
+	.hero-image a:hover button {
+		height: 75px;
+		font-size: 2.2rem;
+		text-shadow: 1.5px 1.5px black;
+	}
+	.gallery-card h3 {
+		font-size: 2rem;
+	}
+}
 @media (max-width: 800px) {
+	header,
+	nav {
+		align-items: center;
+		flex-direction: column;
+	}
+	nav {
+		margin-top: 20px;
+	}
+	.header-logo {
+		font-size: 3.75rem;
+	}
+	.hero-image button {
+		font-size: 1.6rem;
+		height: 65px;
+		border-radius: 7px;
+	}
+	.hero-image button:hover {
+		font-size: 1.8rem;
+	}
+	.hero-image a:hover button {
+		height: 70px;
+		font-size: 1.8rem;
+		text-shadow: 1.5px 1.5px black;
+	}
+	.gallery-card {
+		margin-bottom: 20px;
+	}
+	.gallery-card h3 {
+		font-size: 1.6rem;
+	}
 }
 @media (max-width: 500px) {
+	header,
+	nav {
+		align-items: center;
+		flex-direction: column;
+	}
+	nav {
+		margin-top: 20px;
+	}
+	.header-logo {
+		font-size: 3rem;
+	}
+	.hero-image button {
+		font-size: 1.25rem;
+		height: 65px;
+		border-radius: 7px;
+	}
+	.hero-image button:hover {
+		font-size: 1.3rem;
+	}
+	.hero-image a:hover button {
+		height: 70px;
+		font-size: 1.3rem;
+		text-shadow: 1px 1px black;
+	}
+	.gallery-section-container {
+		justify-content: space-evenly;
+		align-content: space-evenly;
+	}
+	.gallery-card {
+		margin-bottom: 20px;
+	}
+	.gallery-card h3 {
+		font-size: 1.25rem;
+	}
+	.social-media-footer {
+		display: none;
+	}
 }
